--- a/root-config/browser/microfrontend-layout.html
+++ b/root-config/browser/microfrontend-layout.html
@@ -18,9 +18,8 @@
   -->
 
   <main>
-    <header>
-      <application name="@konoha/navbar"></application>
-    </header>
+
+      <application name="@single-spa/welcome"></application>
     <route default>
       <application name="@konoha/ninjas"></application>
     </route>
